--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,10 @@ jobs:
           platforms: all
 
       - name: Set up Docker Buildx
-        # uses: docker/setup-buildx-action@v3
-        uses: docker/setup-buildx-action@15c905b16b06416d2086efa066dd8e3a35cc7f98
-        with:
-          driver-opts: 'image=moby/buildkit:v0.10.5'
+        uses: docker/setup-buildx-action@v3
+        # uses: docker/setup-buildx-action@15c905b16b06416d2086efa066dd8e3a35cc7f98
+        # with:
+        #   driver-opts: 'image=moby/buildkit:v0.10.5'
 
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
