--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,5 +52,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/github:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/github:latest
           platforms: ${{ matrix.platform }}
