--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image to Github Repo as matrix
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -42,13 +42,21 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-matrix:latest
           platforms: ${{ matrix.platform }}
 
+      - name: Build and push Docker image to Github Repo as multiplatform
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-matrix:latest
+          platforms: linux/amd64,linux/arm64
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push to Docker Hub as multiplatform
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -58,7 +66,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/github:latest
 
       # Matrix
-      - name: Build and push
+      - name: Build and push to Docker Hub as matrix
         uses: docker/build-push-action@v6
         with:
           push: true
