--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        # platform: [linux/amd64, linux/arm64]
+        platform: [amd64, arm64]
 
     steps:
       - name: Checkout repository
@@ -40,14 +41,15 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-${{ matrix.platform }}:latest
-          platforms: ${{ matrix.platform }}
-
+          # platforms: ${{ matrix.platform }}
+          platforms: linux/${{ matrix.platform }}
+          
       - name: Build and push Docker image to Github Repo as multiplatform
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-matrix:latest
+          tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app:latest
           platforms: linux/amd64,linux/arm64
 
       - name: Login to Docker Hub
@@ -71,4 +73,4 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/github-${{ matrix.platform }}:latest
-          platforms: ${{ matrix.platform }}
+          platforms: linux/${{ matrix.platform }}
