--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,21 +28,21 @@ jobs:
         # with:
         #   driver-opts: 'image=moby/buildkit:v0.10.5'
 
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
+      # - name: Login to GitHub Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.repository_owner }}
+      #     password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push Docker image to Github Repo as matrix
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-${{ matrix.platform }}:latest
-          # platforms: ${{ matrix.platform }}
-          platforms: linux/${{ matrix.platform }}
+      # - name: Build and push Docker image to Github Repo as matrix
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app-${{ matrix.platform }}:latest
+      #     # platforms: ${{ matrix.platform }}
+      #     platforms: linux/${{ matrix.platform }}
           
       - name: Build and push Docker image to Github Repo as multiplatform
         uses: docker/build-push-action@v6
@@ -67,10 +67,10 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/github:latest
 
-      # Matrix
-      - name: Build and push to Docker Hub as matrix
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/github-${{ matrix.platform }}:latest
-          platforms: linux/${{ matrix.platform }}
+      # # Matrix
+      # - name: Build and push to Docker Hub as matrix
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/github-${{ matrix.platform }}:latest
+      #     platforms: linux/${{ matrix.platform }}
