--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,13 +44,13 @@ jobs:
       #     # platforms: ${{ matrix.platform }}
       #     platforms: linux/${{ matrix.platform }}
           
-      - name: Build and push Docker image to Github Repo as multiplatform
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app:latest
-          platforms: linux/amd64,linux/arm64
+      # - name: Build and push Docker image to Github Repo as multiplatform
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ghcr.io/${{ github.repository_owner }}/multiplatform-app:latest
+      #     platforms: linux/amd64,linux/arm64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
